[package]
name = "desktop-connect"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt", "net", "time", "macros", "io-util", "rt-multi-thread"] }
tokio-util = { version = "0.6.0", features = ["net", "codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.61"
tokio-native-tls = "^0.2.0"